[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "This repository stores all the problems that i solved during my learning phase"
authors = ["Iti Saxena <iti.sims@.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"